k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gameapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: abhaysahu403/gameapp-backend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10

        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
