k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: gameapp
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:

      - name: frontend

        image: abhaysahu403/gameapp-frontend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
